--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "death": "^1.0.0",
     "express": "^4.14.0",
     "ip": "^1.1.3",
+    "mysql": "^2.11.1",
     "socket.io": "^1.4.8"
   }
 }
